--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.155.0",
+    "three": "^0.169.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "lil-gui": "^0.18.2",
-    "stats.js": "^0.17.0"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
